# ABVDGet

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
abvd/: ABVD.py  __init__.py  download.py  download_fast.py
abvdget/: ABVD.py  CognateParser.py  __init__.py  abvd_download.py  tools.py
src/abvdget/: ABVD.py
test/: nengone.json  nengone.xml  test_ABVD.py  test_CognateParser.py  test_Downloader.py  test_Parser.py  test_Record.py  test_bin.py  test_tools.py
test/check_cognates/: check.py
