[project]
name = "abvdget"
version = "0.1.0"
description = "Download data from the Austronesian Basic Vocabulary Database"
authors = [
  {name = "Simon J. Greenhill", email = "simon@simon.net.nz"}
]
readme = "README.md"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
abvd_download = "abvd.download:main"
abvd_xml = "abvd.download_fast:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abvd"]

[tool.hatch.build.targets.sdist]
packages = ["abvd"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]


